<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Smarter Wi-Fi Manager</string>
    <string name="prefs_name">Preferences</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_timerange">Add time range</string>
    <string name="prefs_item_shutdowntime">Wi-Fi Shutdown Time</string>
    <string name="prefs_item_shutdowntime_explanation">If you find Wi-Fi is disabled while adding a new network, or is otherwise toggled too often, you can increase the timeout before it is turned off.</string>
    <string name="prefs_item_notification">Show notification</string>
    <string name="prefs_item_notification_explanation">Turning off notifications may impact the background service in low memory conditions, if you notice problems, leave it on.</string>
    <string name="prefs_item_boot">Automatically start</string>
    <string name="prefs_item_boot_explanation">Automatically start Smarter Wi-Fi Manager service on boot or Wi-Fi and cell tower changes.</string>
    <string name="prefs_item_towermaintenance">Location Maintenance</string>
    <string name="prefs_item_towermaintenance_explanation">Keep the list of locations from growing too large by clever maintenance.</string>
    <string name="prefs_item_use_tower">Use Tower-based Location</string>
    <string name="prefs_item_use_tower_explanation">Use tower-based location to determine when Wi-Fi should be enabled.  This is the default mechanism SWM uses, but may lead to Wi-Fi being enabled over a larger area, depending on the density of cellular towers in your area.</string>
    <string name="prefs_item_aggressive">Aggressive Tower Monitoring</string>
    <string name="prefs_item_aggressive_explanation">Wake up and check the current tower, even when the screen is off.  This can improve responsiveness, but may use slightly more battery power.</string>
    <string name="prefs_item_smartroam">Smarter Wi-Fi Roaming</string>
    <string name="prefs_item_smartroam_explanation">Roam to stronger networks you\'ve used before when your Wi-Fi signal is weak</string>
    <string name="prefs_item_ignore_open">Ignore Open Networks</string>
    <string name="prefs_item_ignore_open_explanation">Don\'t remember the location of open networks</string>
    <string name="prefs_item_use_background">Use Background Wi-Fi Scan</string>
    <string name="prefs_item_use_background_explanation">Use background Wi-Fi scanning instead of cell towers to identify when a network is in range, which can have much higher precision than cell tower based tracking but may take longer to activate Wi-Fi. In this mode, tower-based activation is disabled.</string>
    <string name="prefs_item_use_background_off">Background scanning is turned off - to use background Wi-Fi scanning to control networks, turn on background scanning in Settings->Wi-Fi->Advanced.</string>
    <string name="prefs_item_use_background_unavailable">Background scanning of Wi-Fi is not available on your version of Android, sorry!</string>
    <string name="prefs_item_aggressive_wifi_background">Aggressive Background Wi-Fi Scan</string>
    <string name="prefs_item_aggressive_wifi_background_explanation">Initiate a background Wi-Fi scan regularly instead of counting on the system scan rate.</string>
    <string name="tab_main">Smarter</string>
    <string name="tab_ignore">Ignore</string>
    <string name="tab_learned">Learned</string>
    <string name="tab_bluetooth">Bluetooth</string>
    <string name="tab_time">Time</string>
    <string name="pref_enable" translateable="false">enable_system</string>
    <string name="pref_learn" translateable="false">enable_learning</string>
    <string name="service_desc" translatable="false">Smarter Wi-Fi Service</string>
    <string name="learn_wifi_switch">Auto-Learn Locations</string>
    <string name="ssid_blacklist_desc">These networks will not be tracked.  You can still connect to these networks normally, but SWM won\'t learn where you use them or turn on Wi-Fi automatically.</string>
    <string name="bluetooth_blacklist_description_alt">Select Bluetooth devices (such as your car stereo) where you never use Wi-Fi.  Wi-Fi will be always be turned off while you are connected to checked devices, even somewhere you normally use Wi-Fi.</string>
    <string name="bluetooth_blacklist_description_checked">Wi-Fi will be turned off while you are connected to these checked Bluetooth devices, even somewhere you normally use Wi-Fi.  To use Wi-Fi normally while connected to one of these devices, un-check it from the list.</string>
    <string name="ignore_dialog_title">Ignore network?</string>
    <string name="ignore_dialog_desc">Would you like to also ignore this network in the future?  Ignored networks can be connected to normally, but their location will not be remembered.</string>
    <string name="ignore_dialog_button_normal">No thanks</string>
    <string name="snackbar_ignored">Network ignored</string>
    <string name="snackbar_forgotten">Network forgotten</string>
    <string name="shutdown_time_30s">30 seconds</string>
    <string name="shutdown_time_1m">One minute</string>
    <string name="shutdown_time_2m">Two minutes</string>
    <string name="time_range_desc">Force Wi-Fi on or off at a specific time by adding a time range.</string>
    <string name="nav_ignore">Ignored networks</string>
    <string name="nav_bluetooth">Bluetooth</string>
    <string name="nav_time">Time ranges</string>
    <string name="nav_learned">Learned networks</string>
    <string name="notification_title_on">Wi-Fi turned on</string>
    <string name="notification_title_off">Wi-Fi turned off</string>
    <string name="notification_title_ignore">Not controlling Wi-Fi</string>
    <string name="notification_learning">Remembering you use Wi-Fi here</string>
    <string name="notification_ignoring">Connected to an ignored Wi-Fi network</string>
    <string name="notification_idle">You\'ve used Wi-Fi here before, looking for a network</string>
    <string name="notification_swm_disabled">Smarter Wi-Fi Manager is disabled</string>
    <string name="notification_wifi_neverrun">Open Smarter Wi-Fi Manager to start controlling your Wi-Fi!</string>
    <string name="notification_wifi_time">Wi-Fi controlled by timer</string>
    <string name="notification_wifi_bt">Connected to blacklisted bluetooth</string>
    <string name="notification_wifi_off">You haven\'t used a network here before</string>
    <string name="notification_airplane">Airplane mode</string>
    <string name="notification_tethered">Tethering / sharing connection</string>
    <string name="notification_multiuser">Not the device owner</string>
    <string name="notification_bringup">You\'ve used Wi-Fi here before, turning on Wi-Fi</string>
    <string name="notification_openwifi">Connected to an uncencrypted network</string>
    <string name="wifistate_blocked">Wi-Fi forced off</string>
    <string name="wifistate_ignore">Not managing Wi-Fi</string>
    <string name="wifistate_on">Wi-Fi connected</string>
    <string name="wifistate_off">Wi-Fi disabled</string>
    <string name="wifistate_idle">Wi-Fi enabled but no network</string>
    <string name="title_activity_ssid_blacklist">Ignored Networks</string>
    <string name="title_activity_bluetooth_blacklist">Bluetooth</string>
    <string name="title_activity_timerange">Time Ranges</string>
    <string name="title_activity_learned">Learned Networks</string>
    <string name="learned_number">Learned %1$d towers, %2$d access points</string>
    <string name="timerange_no_ranges">No time ranges configured</string>
    <string name="timerange_no_effect">Time range doesn\'t control anything</string>
    <string name="timerange_no_days">Time doesn\'t occur on any days</string>
    <string name="timerange_disabled_text">Time range disabled</string>
    <string name="timerange_control_wifi">Wi-Fi</string>
    <string name="timerange_control_bluetooth">Bluetooth</string>
    <string name="timerange_control_on">on</string>
    <string name="timerange_control_off">off</string>
    <string name="timerange_controlbutton_wifi">Control Wi-Fi</string>
    <string name="timerange_controlbutton_bt">Control Bluetooth</string>
    <string name="timerange_dialog_delete_title">Delete time range?</string>
    <string name="timerange_dialog_delete_text">Are you sure you would like to delete this time range?</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_ignore">Ignore</string>
    <string name="range_mon">Mon</string>
    <string name="range_tue">Tue</string>
    <string name="range_wed">Wed</string>
    <string name="range_thu">Thu</string>
    <string name="range_fri">Fri</string>
    <string name="range_sat">Sat</string>
    <string name="range_sun">Sun</string>
    <string name="range_fail_nodays">No days selected</string>
    <string name="range_fail_notime">No time set</string>
    <string name="range_fail_nocontrol">No effect on Wi-Fi or Bluetooth</string>
    <string name="quicker_wifi">Wi-Fi</string>
    <string name="quicker_bt">Bluetooth</string>
    <string name="no_bluetooth">No bluetooth devices or Bluetooth disabled</string>
    <string name="snackbar_delete_timerange">Time range deleted</string>
    <string name="snackbar_delete_network">Network forgotten</string>
    <string name="snackbar_delete_tower">Location forgotten</string>
    <string name="snackbar_delete_undo">Undo</string>
    <string name="simple_explanation_learning">Connected, we\'ll remember you use Wi-Fi here.</string>
    <string name="simple_explanation_blackssid">Connected to a network you\'ve ignored, we won\'t remember this spot.</string>
    <string name="simple_explanation_openssid">Connected to an unencrypted network, we won\'t remember this spot.</string>
    <string name="simple_explanation_idle">You\'ve used Wi-Fi here before, looking for a network.</string>
    <string name="simple_explanation_off">Wi-Fi turned off, you haven\'t used a network here before.</string>
    <string name="simple_explanation_time">You set Wi-Fi to be turned %1$s from %2$d:%3$d to %4$d:%5$d.</string>
    <string name="simple_explanation_bt">Connected to a bluetooth device you picked to block Wi-Fi.</string>
    <string name="simple_explanation_disabled">You\'ve turned off Wi-Fi management.</string>
    <string name="simple_explanation_airplane">You\'re in airplane mode, we won\'t change the Wi-Fi settings.</string>
    <string name="simple_explanation_tether">You\'re tethering or sharing your connection, we won\'t change the Wi-Fi settings.</string>
    <string name="simple_explanation_neverrun">Open Smarter Wi-Fi Manager to start controlling your Wi-Fi!</string>
    <string name="simple_explanation_add">SWM is paused, we\'ll keep Wi-Fi enabled until you connect to a network.</string>
    <string name="simple_explanation_multiuser">Wi-Fi management turned off, we\'re not the device owner.</string>
    <string name="simple_explanation_bringup">You\'ve used Wi-Fi here before. Turning on Wi-Fi.</string>
    <string name="simple_explanation_permissions">Smarter Wi-Fi Manager needs permissions enabled to function.</string>
    <string name="simple_explanation_bgscan">Wi-Fi turned off, you haven\'t used a network here before.</string>
    <string name="main_explanation_swm_disabled">Turn Smarter Wi-Fi Manager on to automatically manage your Wi-Fi</string>
    <string name="main_pause_text">Wi-Fi is turned off right now.  You can pause Smarter Wi-Fi Manager and add a new network.</string>
    <string name="main_pause_button">Add new network</string>
    <string name="main_alert_alwaysscan">Android is configured to scan in the background even if Wi-Fi is turned off.  We recommend turning off \"Always Allow Scanning\"</string>
    <string name="main_alert_alwaysscan_advanced">Settings</string>
</resources>