<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Smarter">

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/prefsTimeSecondString"
            android:entryValues="@array/prefsTimeSeconds"
            android:key="@string/prefs_item_shutdowntime"
            android:title="@string/prefs_item_shutdowntime" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefs_item_use_background"
            android:title="@string/prefs_item_use_background"
            android:summary="@string/prefs_item_use_background_explanation" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefs_item_aggressive_wifi_background"
            android:title="@string/prefs_item_aggressive_wifi_background"
            android:summary="@string/prefs_item_aggressive_wifi_background_explanation" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefs_item_aggressive"
            android:title="@string/prefs_item_aggressive"
            android:summary="@string/prefs_item_aggressive_explanation" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefs_item_ignore_open"
            android:title="@string/prefs_item_ignore_open"
            android:summary="@string/prefs_item_ignore_open_explanation"
            />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefs_item_notification"
            android:title="@string/prefs_item_notification"
            android:summary="@string/prefs_item_notification_explanation"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="start_boot"
            android:title="@string/prefs_item_boot"
            android:summary="@string/prefs_item_boot_explanation"/>

    </PreferenceCategory>

</PreferenceScreen>
