<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:svgimageview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageMain"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:minHeight="96dp"
            android:minWidth="96dp"
            android:maxHeight="96dp"
            android:maxWidth="96dp"
            android:src="@drawable/main_swm_idle"
            android:cropToPadding="false"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_explanation_idle"
            android:id="@+id/textViewHeadline"
            style="@style/TextHugeLight"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imageMain"
            android:layout_toRightOf="@+id/imageMain"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchSwmEnable"
            android:checked="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/layoutMainPauseHolder"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewPauseAdd"
                    android:src="@drawable/ic_alarm_add"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_pause_text"
                    android:id="@+id/textViewPauseAdd"
                    style="@style/TextMedium"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageViewPauseAdd"
                    android:layout_toEndOf="@+id/imageViewPauseAdd"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:layout_below="@+id/textViewPauseAdd"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_pause_button"
                        android:id="@+id/textViewPauseButton"
                        android:layout_gravity="right|bottom"
                        android:theme="@style/TextMedium"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:paddingLeft="16dp"
                        android:paddingTop="3dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="3dp" />
                </FrameLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDivider"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/mainDivider1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/layoutMainBackgroundAlertHolder"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#ffaeaf">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewBackgroundAlert"
                    android:src="@drawable/ic_perm_scan_wifi"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_alert_alwaysscan"
                    android:id="@+id/textViewBackgroundAlert"
                    style="@style/TextMedium"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageViewBackgroundAlert"
                    android:layout_toEndOf="@+id/imageViewBackgroundAlert"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ff3d41"
                    android:layout_below="@+id/textViewBackgroundAlert"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:elevation="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_alert_alwaysscan_advanced"
                        android:id="@+id/textViewBackgroundAlertButton"
                        android:layout_gravity="right|bottom"
                        android:theme="@style/TextMedium"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:paddingLeft="16dp"
                        android:paddingTop="3dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="3dp" />
                </FrameLayout>

            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>